# ProjectWeather

./: .gitignore  BaseClassDoc.md  Baseclassdoc.md  InstallationGuide.md  Installationsanleitung  README.md  Rollen 02.02.2023.md  Rollen 19.01.2023.md  requirements.txt  setup.cfg
Backend/: Dockerfile  InstallationGuide.md  __init__.py  setup.cfg
Backend/src/: BaseWeatherAPI.py  PLZ_Verzeichnis.xlsx  Wttr.py  __init__.py  main.py  test.py
Backend/weather_project/: db.sqlite3
Backend/weather_project/weather_app/: models.py  views.py
Backend/weather_project/weather_app/static/css/: login.css  new_layout.css  new_login_layout.css  new_new_layout.css
Backend/weather_project/weather_app/templates/html/: data.html  login.html  new_data.html  new_index.html  new_login.html  new_new_index.html  register.html
Backend/weather_project/weather_app/tests/: __init__.py  test_apis.py  test_startup.py
Backend/weather_project/weather_project/: settings.py
DataParser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Meilensteine/: Beispiel_Meilenstein.md  Betriebs_Meilensteine.md  Dokumentations_Meilensteine.md  Frontend_Meilensteine.md  Protokoll_Meilensteine.md  Teamlead_Meilensteine.md
Protokoll/: Daily_Protokoll.md  Massives_Protokoll.md  Protokoll_Goelles.md  Protokoll_Lackner.md  Protokoll_Lazau.md  Protokoll_Lorber.md  Protokoll_Postl.md  Protokoll_Retter.md  Protokoll_Schneidhofer.md  Protokoll_Wimmer.md  TestProtokollVorlage.md
src/: BaseWeatherAPI.py  CityNotFound.py  Wttr.py  __init__.py  main.py  open_weather.py  test.py  weatherbitapi_class.py
(+39 files in other folders)
