[metadata]
name = DataParser
author = Robert Ulmer
author_email = rulmer@lr.htlweiz.at
description = Create da dataparser.
version = 1.0.0
url = https://github.com
keywords = logging
	pytest
	school
	file 
	parser
	output
	input

license_file =
	LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
fip_safe = False


[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info